fix: update error eligibility message and improve layout alignment

--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ h5 {
 	font-size: 1.2rem;
 	margin-top: .5rem;
 	margin-bottom: .5rem;
+	text-align: center;
 }
 
 p {
@@ -114,7 +115,7 @@ label {
 .page.active {
 	display: flex;
 	flex-direction: column;
-	align-items: left;
+	align-items: center;
 	justify-content: center;
 	min-height: 100vh;
 	width: 65%;
@@ -198,6 +199,8 @@ textarea {
 .overlap img {
 	max-width: 90%;
 	max-height: 200px;
+	min-width: 90%;
+	min-height: 200px;
 	display: block;
 	margin: 0 auto;
 	/* Center horizontally */
